# misc

./: .gitignore
3d/: 1586036245361-pa5-2.stl  25_mm_ratchet_-_all_in_one_-_opened.stl  2_easy_gyro_test.stl  40_mm_ratchet_-_all_in_one_-_opened.stl  BagClip_65.stl  BagClip_85.stl  Blind_Pull_Top.stl  Chip_Bag_Clip_V7_Large (1).stl  Chip_Bag_Clip_V7_Medium.stl  Chip_Bag_Clip_V7_Small.stl  Clearance_calibration_2.0.stl  Customizable_egg.scad  DrainCatchFixed-UrbanV1_6.scad  Drain_plug_3_revised.stl  Extruder_Fan_Spacer.stl  FCT_dice.scad  FlashForge_CreatorPro.scad  Gomboc__rescaled_placed.stl  IM.scad  IM.stl  Infinity_Cube_15_Mesh_19.stl  Infinity_Cube_75.stl  KF2510_extractor (1).stl  Kobayashi_Fidget_Cube-v1.1.stl  LM8UU_by_3drap_dia8_1.STL  Lashmaze_ws.stl  Loaded_Dice.scad  NinjaFlex_project_settings.3mf  PLA_t_tower_before_layer_change_macro.txt  PanelDueEnclosure.scad  Paper_Sweep_complete.stl  RC.scad  SinkStrainer_UrbanAtWork_NonCustomizerVersion.scad  SmartTemperatureTower_PLA_180-225.stl  Snowflake05cm.stl  SphericalIrisBox (1).stl  SphericalIrisBox.scad  Spreader.STL  Spuck_Schild_-_Redrawed_version.stl  TOUL.scad  (+298 more)
battery_cutoff/: README.md
binomial/: test.R
config_obj/: .run.sh  main.py  text.original
context_search_chrome_plugin/: ContextSearchOptions_2023-11-20_011557.json  ContextSearchOptions_2024-01-06_043107.json
duet3d_accel/: .gitignore  (+7 more)
pyinstaller-scons/: .run.sh  .sconsign.dblite  pyproject.toml  run.sh
pyinstaller-scons/myapp/: main.py  my_lib.py  sconstruct
pyinstaller-scons/pyinstaller/: .sconsign.dblite  build.sh  myapp.spec
(+1504 files in other folders)
